# spawn_model_naito

./: CMakeLists.txt  README.md  package.xml
launch/: spawn_model_default.launch
src/: __init__.py  spawn_model_4obj_pos.py  spawn_model_obj_pos_fix.py  spawn_model_obj_pos_random.py  spawn_model_pos_fix.py
