<?xml version="1.0"?>
<package format="2">
  <name>spawn_model_naito</name>
  <version>1.0.0</version>
  <description>The spawn_model_naito package</description>
  <maintainer email="naito.taichi@em.ci.ritsumei.ac.jp">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>

